# MCGo

./: .gitignore  .mcgoignore  README.md  clients.toml  mcgo_client.toml  mcgo_server.toml  pyproject.toml  requirements.txt
.claude/: settings.local.json
csharp/McGo.Client/: McGo.Client.csproj  McGoClient.cs  SyncResult.cs
csharp/McGo.Client/Auth/: ClientAuth.cs
csharp/McGo.Client/Config/: ClientConfig.cs  ConfigLoader.cs
csharp/McGo.Client/Crypto/: AesGcmHelper.cs  RsaSigner.cs  ZlibHelper.cs
csharp/McGo.Client/Protocol/: MessageSerializer.cs  Topics.cs
csharp/McGo.Client/Sync/: ChunkAssembler.cs  FileTree.cs  IgnoreRules.cs  PathMapping.cs
src/mcgo/: __main__.py  auth.py  chunking.py  cli.py  client.py  config.py  crypto.py  ignore.py  protocol.py  server.py  tree.py  watcher.py
tests/: conftest.py  test_auth.py  test_chunking.py  test_client.py  test_config.py  test_crypto.py  test_ignore.py  test_protocol.py  test_server.py  test_tree.py  test_watcher.py
