[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mcgo"
version = "0.1.0"
description = "MQTT-based file synchronization system"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=2.0.0",
    "cryptography>=42.0.0",
    "watchdog>=4.0.0",
]

[project.scripts]
mcgo = "mcgo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mcgo"]
