[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcgo"
version = "0.1.0"
description = "MQTT-based file synchronization system"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=2.0.0",
    "cryptography>=42.0.0",
    "watchdog>=4.0.0",
]

[project.scripts]
mcgo = "mcgo.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mcgo"]
